# Gen_AI-HandsON

./: Prompt_Engineering  README.md  test.ipynb
Embedding_fundamentals/: Embeddings_Fundamentals.ipynb
HandsOn/: app.py  classifier.py  imgExtractor.py
RAG_APP/: main.py  requirements.txt
RAG_APP/src/Retrival_Module/: retrieval.py
RAG_APP/src/config_Module/: config.py
RAG_APP/src/document_ingestion_Module/: docIngestion.py
RAG_APP/src/embeddings_Module/: embeddings.py
RAG_APP/src/llm_call/: llm.py
RAG_APP/src/vectorStore_Module/: vectorStore.py
knowledge Assistant/: main.py  pyproject.toml  requirements.txt  streamlit_app.py
knowledge Assistant/src/config/: config.py
knowledge Assistant/src/document_ingestion/: document_processor.py
knowledge Assistant/src/graph_builder/: graphbuilder.py
knowledge Assistant/src/nodes/: nodes.py  reactNode.py
knowledge Assistant/src/state/: rag_state.py
knowledge Assistant/src/vectorstore/: vectorstore.py
knowledge Assistant/vectorstore_data/99f93747-c3f3-47dc-a7de-8b9ebbc9602a/: index_metadata.pickle
knowledge Assistant/vectorstore_data_c116ebed/: chroma.sqlite3
